# exp-ev-wp-detectie

./: .env.example  .gitignore  README.md  pyproject.toml
ev_detection/notebooks/: elaad_charging_profiles.ipynb  pulse_baseloads.ipynb  synthetic_profiles.ipynb
ev_detection/src/: charging_profile.py  data_loader.py  synthetic_profiles.py
ev_detection/src/features/: feature_builder.py  feature_input.py
ev_detection/src/features/instances/: base.py  max.py  peak_prominence.py  peak_widths.py  start_time.py
ev_detection/src/features/utils/: changepoint_detection.py  peak_detection.py  plateau_detection.py
ev_detection/src/input/: baseload_profiles.py  charging_profile.py  data_loader.py  load_profiles.py  synthetic_profiles.py
ev_detection/src/model/: classifier.py
ev_detection/src/types/: classifier_names.py  classifier_types.py  feature_names.py  feature_types.py  profiles.py
ev_detection/src/visualisation/: plot_changepoints.py  plot_peaks.py
ev_detection/tests/: test_baseload_profile.py  test_charging_profile.py  test_data_loader.py  test_feature_builder.py
