[tool.poetry]
name = "exp-ev-wp-detectie"
version = "0.1.0"
description = ""
authors = ["Jim Scheefhals <jim.scheefhals@dep.nl>"]
readme = "README.md"
packages = [
    { include = "ev_detection" },
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
polars = "^0.20.31"
scipy = "^1.13.1"
pytest = "^8.2.2"
pyarrow = "^16.1.0"
openpyxl = "^3.1.4"
ruptures = "^1.1.9"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
